--- a/Home.css
+++ b/Home.css
@@ -21,6 +21,7 @@
   0% {
     -webkit-transform: rotate(0deg);
   }
+
   100% {
     -webkit-transform: rotate(360deg);
   }
@@ -30,6 +31,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -49,6 +51,7 @@
     bottom: -100px;
     opacity: 0;
   }
+
   to {
     bottom: 0px;
     opacity: 1;
@@ -60,6 +63,7 @@
     bottom: -100px;
     opacity: 0;
   }
+
   to {
     bottom: 0;
     opacity: 1;
@@ -79,6 +83,14 @@ body {
 
 .container-fluid .row .left {
   margin-top: 20px;
+
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+#main-heading {
+  text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .container-fluid .row .left .container1-l {
@@ -189,94 +201,100 @@ body {
   margin-top: 20px;
 }
 
-.row .right .userbtn button {
-  margin-top: 5px;
-  margin-bottom: 10px;
-  border-style: none;
-  border-width: 0px;
-  border-radius: 12px;
-  margin-left: 95%;
+.row .right .nav {
+  margin-top: 10px;
 }
 
-.row .right {
-  background-color: rgb(243, 243, 243);
-  width: 500px;
-  height: min-content;
-}
 
-.container-fluid .row .right .container3-r #table2 {
-  border-collapse: collapse;
-  margin: 25px 0;
-  font-size: 0.9em;
-  font-family: sans-serif;
-}
-
-.container-fluid .row .right .container3-r #table2 thead tr {
-  background-color: rgb(233, 233, 233);
-  word-spacing: 50px;
-}
-
-.container-fluid .row .right .container3-r #table2 th,
-.container-fluid .row .right .container3-r #table2 td {
-  padding: 12px 15px;
-  width: 50%;
-  background-color: rgb(233, 233, 233);
-}
-
-/* /////////////////////////////////////////////////////////// */
-.container-fluid .row .right .container4-r #table3 {
-  border-collapse: collapse;
-  margin: 25px 0;
-  font-size: 0.9em;
-  font-family: sans-serif;
-}
-
-.container-fluid .row .right .container4-r #table3 thead tr {
-  background-color: rgb(233, 233, 233);
-  word-spacing: 50px;
-}
-
-.container-fluid .row .right .container4-r #table3 th,
-.container-fluid .row .right .container4-r #table3 td {
-  padding: 12px 15px;
-  width: 100%;
-  background-color: rgb(233, 233, 233);
-}
-
-div.scroll {
-  width: 450px;
-  height: 150px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  text-align: justify;
-}
-
-div.scroll1 {
-  width: 450px;
-  height: 250px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  text-align: justify;
-}
-
-@media screen and (max-width: 600px) {
-  div.container1-l input {
-    padding-left: 40px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .container-fluid .row .left #expen-icon {
-    padding-left: -10px;
-    word-spacing: 18px;
+  .row .right .nav button {
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border-style: none;
+    border-width: 0px;
+    border-radius: 12px;
+    margin-left: 50%;
   }
 
-  .container-fluid .row .left #expen-selection {
-    padding-left: -10px;
-    word-spacing: 40px;
+  .row .right {
+    background-color: rgb(243, 243, 243);
+    width: 500px;
+    height: min-content;
   }
-  .container-fluid .row .left #expen-title {
-    padding-left: -10px;
-    word-spacing: 4px;
+
+  .container-fluid .row .right .container3-r #table2 {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
   }
-}
+
+  .container-fluid .row .right .container3-r #table2 thead tr {
+    background-color: rgb(233, 233, 233);
+    word-spacing: 50px;
+  }
+
+  .container-fluid .row .right .container3-r #table2 th,
+  .container-fluid .row .right .container3-r #table2 td {
+    padding: 12px 15px;
+    width: 50%;
+    background-color: rgb(233, 233, 233);
+  }
+
+  /* /////////////////////////////////////////////////////////// */
+  .container-fluid .row .right .container4-r #table3 {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+  }
+
+  .container-fluid .row .right .container4-r #table3 thead tr {
+    background-color: rgb(233, 233, 233);
+    word-spacing: 50px;
+  }
+
+  .container-fluid .row .right .container4-r #table3 th,
+  .container-fluid .row .right .container4-r #table3 td {
+    padding: 12px 15px;
+    width: 100%;
+    background-color: rgb(233, 233, 233);
+  }
+
+  div.scroll {
+    width: 450px;
+    height: 150px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    text-align: justify;
+  }
+
+  div.scroll1 {
+    width: 450px;
+    height: 250px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    text-align: justify;
+  }
+
+  @media screen and (max-width: 600px) {
+    div.container1-l input {
+      padding-left: 40px;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .container-fluid .row .left #expen-icon {
+      padding-left: -10px;
+      word-spacing: 18px;
+    }
+
+    .container-fluid .row .left #expen-selection {
+      padding-left: -10px;
+      word-spacing: 40px;
+    }
+
+    .container-fluid .row .left #expen-title {
+      padding-left: -10px;
+      word-spacing: 4px;
+    }
+  }
